# billogram-challenge

./: .coveragerc  .env  .env.template  .gitignore  .pylintrc  Makefile  README.org  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  format.yml  lint.yml  rollout.yml  tests.yml
architecture/: cache.yml  config.yml  db.yml  ingress.yml  secret.yml  tasks.yml  web.yml
containers/nginx/: Dockerfile  nginx.conf
containers/web/: Dockerfile  entrypoint.sh  gunicorn.py
src/: asgi.py  celery_app.py  wsgi.py
src/apps/admin/: __init__.py  admin.py  apps.py  urls.py
src/apps/api/: __init__.py  apps.py  permissions.py  shortcuts.py  tests.py  urls.py
src/apps/domain/: __init__.py  apps.py
src/apps/worker/: example.py  send_email.py  tasks.py
src/commons/: auth.py  celery.py  collections.py  currency.py  deprecation.py  exceptions.py  functools.py  gentools.py  image.py  internationalization.py  jwt.py  loaders.py  mail.py  middleware.py  migrations.py  parser.py  shortcuts.py  string.py  switch.py  timezone.py  urls.py  validators.py
src/commons/admin/: __init__.py  admin.py  apps.py  decorators.py  filters.py  groups.py  mixins.py  settings.py  shortcuts.py  urls.py  utils.py
src/commons/api/: auth.py  fields.py  jwt_auth.py  mixins.py  permissions.py  routers.py  serializers.py  viewsets.py
src/commons/djutils/: db.py  upload.py
src/commons/forms/: fieldsets.py  mixins.py
src/docs/: api.openapi.json
src/settings/: base.py  development.py  production.py  test.py
src/urls/: base.py  development.py  production.py
(+158 files in other folders)
